# django-test-task

./: README.md  pyproject.toml
django_news/api/: serializers.py  urls.py  views.py
django_news/django_news/: settings.py  urls.py
django_news/news/: admin.py  apps.py  models.py  urls.py  views.py
django_news/news/static/all_news/css/: all-news.css  all-news.css.map  news-by-tag.css  news-by-tag.css.map  single-news.css  single-news.css.map
django_news/news/static/all_news/js/: all-news.js  news-by-tag.js  single-news.js
django_news/news/templates/: all-news.html  news-by-tag.html  single-news.html
django_news/news_statistics/: apps.py  urls.py  views.py
django_news/news_statistics/templates/: statistics.html
tests/: test.py
