[tool.poetry]
name = "django-news"
version = "0.1.0"
description = ""
authors = ["404 <example@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
